# Cross-Road

./: .gitignore  CMakeLists.txt  README.md
assets/images/: scale.py
assets/images/xcf/: backgound.xcf  background.xcf  buttons.xcf  buttons_black.xcf
cmake/: FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  googletest-download.cmake  googletest.cmake
include/: Obstacle.hpp  box.hpp  obstacle.hpp  player.hpp
src/: CMakeLists.txt  Obstacle.cpp  box.cpp  constant.hpp  constants.cpp  constants.hpp  controller.cpp  controller.hpp  exception.cpp  exception.hpp  game.cpp  game.hpp  main.cpp  object.cpp  object.hpp  player.cpp  player.hpp  pointer.cpp  pointer.hpp  scene.cpp  scene.hpp  screen.cpp  screen.hpp  screenMain.cpp  screenMain.hpp  screenPause.cpp  screenPause.hpp  screenPlay.cpp  screenPlay.hpp  screenScore.cpp  screenScore.hpp  screenSetting.cpp  screenSetting.hpp  sound.cpp  sound.hpp  texture.cpp  texture.hpp  view.cpp  view.hpp
test/: CMakeLists.txt  sample1.cpp  sample1.hpp  test-sample1.cpp  test1.cpp
